align form results correctly

--- a/src/styles.css
+++ b/src/styles.css
@@ -54,6 +54,8 @@ form{
    align-items: center;
 }
 
+
+
 input{
     border-radius: 5px;
     border-width: 1px;
@@ -94,19 +96,51 @@ input{
     width: 100%;
     height: 10em;
     background-color: aqua;
+    display: flex;
+    flex-direction: column;
     
+}
+
+#cvHeaderDetails{
+    display: flex;
+    flex-direction: row;
+    width: 100%;
+  justify-content: space-around;
+  align-items: center;
 }
 
 #cvEducationContainer{
     width: 100%;
     height: fit-content;
+    display: flex;
+    flex-direction: column;
    
+}
+
+#cvEducationDetailsContainer{
+    display: flex;
+    width: 100%;
+    justify-content: space-around;
 }
 
 #cvExperienceContainer{
     width: 100%;
     height: fit-content;
+    display: flex;
+    flex-direction: column;
   
+}
+#expDetailsRight{
+    width: 100px;
+    height: fit-content;
+}
+
+
+#cvExperienceDetialsContainer{
+display: flex;
+width: 100%;
+flex-direction: row;
+justify-content: space-around;
 }
 
 #cvDescriptionContainer{
